<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/sv_fields"
        android:elevation="2dp"
        android:background="@color/white"
        android:orientation="vertical">

        <include layout="@layout/toolbar"/>

    </LinearLayout>


    <ScrollView
        android:id="@+id/sv_fields"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/ll_footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_field"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/tv_pick_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_pick_image"
                    android:textSize="@dimen/main_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_main"
                    android:background="@drawable/background_field"
                    android:backgroundTint="@color/white"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/padding"

                    android:paddingTop="@dimen/padding"
                    android:paddingRight="@dimen/padding"
                    android:paddingBottom="@dimen/padding_big">

                    <ImageView
                        android:id="@+id/iv_image"
                        android:layout_width="wrap_content"
                        android:layout_height="150dp"
                        android:layout_gravity="center_horizontal"
                        android:adjustViewBounds="true"
                        android:background="@drawable/background_field"
                        android:backgroundTint="@color/white"
                        android:calendarViewShown="false"
                        android:clipToOutline="true"
                        android:datePickerMode="spinner"
                        android:contentDescription="@string/tv_image"
                        android:src="@drawable/noimage" />

                </LinearLayout>

            </LinearLayout>

            <EditText
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/main_text"
                android:layout_marginTop="@dimen/margin_main"
                android:background="@drawable/background_field"
                android:hint="@string/et_first_name"
                android:inputType="text"
                android:padding="@dimen/padding" />

            <EditText
                android:id="@+id/et_last_name"
                android:textSize="@dimen/main_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_main"
                android:background="@drawable/background_field"
                android:hint="@string/et_last_name"
                android:inputType="text"
                android:padding="@dimen/padding" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_field"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/tv_pick_birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_pick_birthday"
                    android:textSize="@dimen/main_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <DatePicker
                    android:id="@+id/dp_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="@dimen/margin_main"
                    android:background="@drawable/background_field"
                    android:backgroundTint="@color/white"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner"

                    />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sv_fields"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:padding="@dimen/padding"
        android:gravity="center"
        android:elevation="8dp"
        android:background="@color/white">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_save"
            android:background="@drawable/background_field"
            android:text="Сохранить"
            android:textSize="@dimen/main_text"/>

</LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>