<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <include layout="@layout/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/sv_fields"/>

    <ScrollView
        android:id="@+id/sv_fields"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_field"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/tv_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_data"
                    android:textSize="@dimen/main_text"
                    android:layout_gravity="top|start"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_main"
                    android:background="@drawable/background_field"
                    android:backgroundTint="@color/white"
                    android:orientation="horizontal"
                    android:padding="@dimen/padding">

                    <ImageView
                        android:id="@+id/iv_image"
                        android:layout_width="wrap_content"
                        android:layout_height="101dp"
                        android:layout_gravity="center_horizontal"
                        android:adjustViewBounds="true"
                        android:background="@drawable/background_field"
                        android:backgroundTint="@color/white"
                        android:calendarViewShown="false"
                        android:clipToOutline="true"
                        android:datePickerMode="spinner"
                        android:contentDescription="@string/tv_image"
                        android:src="@drawable/noimage" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="@dimen/margin_small">

                        <TextView
                            android:id="@+id/tv_full_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/main_text"
                            android:background="@drawable/background_field"
                            android:text="Имя Фамилия"
                            android:textStyle="bold"
                            android:padding="@dimen/padding" />

                        <TextView
                            android:id="@+id/tv_birthday"
                            android:textSize="@dimen/main_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_small"
                            android:background="@drawable/background_field"
                            android:text="Дата рождения"
                            android:padding="@dimen/padding" />


                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_field"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/tv_events_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_events_header"
                    android:textSize="@dimen/main_text"
                    android:layout_gravity="top|start"/>

                <TextView
                    android:id="@+id/tv_events"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:text="Здесь будут отображаться события"
                    android:textSize="@dimen/main_text"
                    android:padding="@dimen/padding"
                    android:layout_marginTop="@dimen/margin_main"
                    android:background="@drawable/background_field"
                    android:backgroundTint="@color/white"/>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>